update to homework, fixed the readme file i some how edited and got the bullet points centered....also gave span text a background...not the prettiest thing but for legibility it works

--- a/Lesson2-HTML-CSS/homework/styles.css
+++ b/Lesson2-HTML-CSS/homework/styles.css
@@ -16,6 +16,7 @@ img {
 #spanId {
     font-size: 18px;
     margin: 50px;
+    background: rgba(255, 250, 250, 0.7);
 
 }
 html {
@@ -33,4 +34,8 @@ h3 {
 }
 h4 {
     background: rgba(255, 250, 250, 0.7);
+}
+li {
+    margin: 10 170 10 170;
+
 }
